# xen-fret

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.gh-pages.toml  Dioxus.toml  LICENSE  README.md  build.rs  cabal.project  default.nix  flake.nix  hsfrets.cabal  rust-toolchain.toml  xen-fret.cabal
.github/workflows/: build.yml  deploy.yml
.obelisk/impl/: github.json
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/androidTest/java/io/github/sintrastes/xenfret/: ExampleInstrumentedTest.kt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/io/github/sintrastes/xenfret/: MainActivity.kt  XenFretViewModel.kt
app/android/app/src/main/java/io/github/sintrastes/xenfret/ui/screens/: AddInstrumentDialog.kt  MainScreen.kt
app/android/app/src/main/java/io/github/sintrastes/xenfret/ui/theme/: Color.kt  Theme.kt  Type.kt
app/android/app/src/main/java/uniffi/xen_fret_uniffi/: xen_fret_uniffi.kt
app/android/app/src/main/res/values/: strings.xml  themes.xml
app/android/app/src/test/java/io/github/sintrastes/xenfret/: ExampleUnitTest.kt
app/android/gradle/: libs.versions.toml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/common/: Cargo.toml
app/common/src/: diagrams.rs  font.rs  geometry.rs  hit_test.rs  lib.rs  pitch_map.rs  preferences.rs  state.rs  storage.rs
app/common/src/storage/: native.rs
app/dioxus_frontend/: Cargo.toml  Dioxus.gh-pages.toml  Dioxus.toml  build.rs
app/dioxus_frontend/assets/: base.css  macos.css
app/dioxus_frontend/assets/icons/: icon.icns
app/dioxus_frontend/src/: geometry_tracker.rs  main.rs  soundfont.rs  state.rs
app/dioxus_frontend/src/components/: color_picker.rs  combobox.rs  fretboard_preview.rs  instrument_picker.rs  layout.rs  mod.rs  select.rs
app/dioxus_frontend/src/pages/: backing_track.rs  chords.rs  home.rs  preferences.rs  scales.rs  temperaments.rs  tunings.rs
app/dioxus_frontend/src/pitch_tracking/: mod.rs
app/dioxus_frontend/src/platform/: mod.rs
app/gtk_frontend/: Cargo.toml
app/gtk_frontend/src/: app.rs  main.rs  render.rs
app/uniffi_frontend_lib/: Cargo.toml
app/uniffi_frontend_lib/src/: lib.rs
assets/: style.css  web.css
common/: common.cabal
common/src/: App.hs
common/src/Frets/: Util.hs
fretboard-diagrams/: Cargo.toml
fretboard-diagrams/src/: lib.rs
frontend/: frontend.cabal  warp-frontend.cabal
frontend/src/: Main.hs
icon-gen/: Cargo.toml
icon-gen/src/: lib.rs  main.rs
nix/: reflex-platform.nix
patches/ndk-context/: Cargo.toml
patches/ndk-context/src/: lib.rs
src/: Frets.hs  Frets.hs~  Main.hs  Main.hs~  Utils.hs  audio.rs  fretboard.rs  geometry_tracker.rs  main.rs  models.rs  notation.rs  routes.rs  sequencer.rs  soundfont.rs  state.rs  storage.rs  theme.rs  theory.rs
src/Frets/: Util.hs  Util.hs~
src/components/: color_picker.rs  fretboard_preview.rs  instrument_picker.rs  layout.rs  modal.rs
src/pages/: backing_track.rs  chords.rs  home.rs  mod.rs  preferences.rs  scales.rs  temperaments.rs  tunings.rs
src/pitch_tracking/: detector.rs  fft_util.rs  hps.rs  hz_to_degree.rs  iterf0.rs  mic_web.rs  mod.rs  yin.rs
src/platform/: default.rs  linux.rs  macos.rs  mod.rs
src/storage/: native.rs  web.rs
tauri-app/: package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
warp-frontend/: warp-frontend.cabal
warp-frontend/src/: Main.hs
xen-dsp/: Cargo.toml
xen-dsp/src/: hps.rs  iterf0.rs  lib.rs  yin.rs
xen-fret/: xen-fret.cabal
xen-fret/src/: App.hs  Frets.hs  Utils.hs  XenFret.hs
xen-fret/src/Frets/: AppData.hs  Data.hs
xen-fret/src/Reflex/Dom/: Extras.hs  Forms.hs
xen-fret/src/XenFret/: App.hs  AppData.hs  Data.hs  Sagittal.hs  TemperamentTheory.hs  Util.hs
xen-fret/src/XenFret/App/: Util.hs
xen-fret/src/XenFret/App/Pages/: Chords.hs  Main.hs  Preferences.hs  Scales.hs  Temperaments.hs  Tunings.hs
xen-fret/src/XenFret/App/Widgets/: CRUD.hs  ColorPicker.hs  Fretboard.hs  Github.hs
xen-fret/src/XenFret/Diagrams/: Fretboard.hs
xen-fret/static/: main.css  main.js
xen-sequencer/: Cargo.toml
xen-sequencer/src/: backend.rs  lib.rs  mic.rs  native_audio.rs  native_mic.rs  sequencer.rs
xen-theory/: Cargo.toml
xen-theory/src/: chord.rs  dataset.rs  fretboard.rs  instrument.rs  lib.rs  notation.rs  scala.rs  scale.rs  temperament.rs  theory.rs  tuning.rs
