[workspace]
members = [
    "app/dioxus_frontend",
    "app/common",
    "icon-gen",
    "xen-theory",
    "xen-dsp",
    "xen-sequencer",
    "fretboard-diagrams",
]
resolver = "2"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
debug = false
lto = true

[patch.crates-io]
# Patch out the assertion that panics when Android recreates the activity
# (e.g. config change, back-stack re-launch) without calling onDestroy first.
ndk-context = { path = "patches/ndk-context" }
