name:                xen-fret
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              Nathan BeDell
maintainer:          nabedell@liberty.edu
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable xen-fret
  main-is: Main.hs          
  other-modules:       Frets, Frets.Util
  default-extensions:
    OverloadedStrings
  build-depends:
      base
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , svg-builder
    , cgi
    , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
