name:                xen-fret
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              Nathan BeDell
maintainer:          nbedell@tulane.edu
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library       
  exposed-modules:       
      Frets,
      Frets.Util, 
      Utils,
      App
  default-extensions:
      OverloadedStrings
    , PartialTypeSignatures
    , FlexibleContexts
    , TypeFamilies
    , RecursiveDo
    , TemplateHaskell
    , TypeApplications
  build-depends:
      base
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , svg-builder
    , bytestring
    , containers
    , multimap
    , aeson
    , reflex-dom
    , jsaddle-warp
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
