name:                frontend
version:             0.2.0.0
license:             AGPL-3
license-file:        LICENSE
author:              Nathan BeDell
maintainer:          nbedell@tulane.edu      
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is: Main.hs          
  default-extensions:
      OverloadedStrings
    , PartialTypeSignatures
    , FlexibleContexts
    , TypeFamilies
    , RecursiveDo
    , TemplateHaskell
    , TypeApplications
  build-depends:
      base
    , xen-fret
    , reflex-dom
    , jsaddle-warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
