name:                warp-frontend
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              Nathan BeDell
maintainer:          nbedell@tulane.edu
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable warp-frontend
  main-is: Main.hs          
  default-extensions:
      OverloadedStrings
    , PartialTypeSignatures
    , FlexibleContexts
    , TypeFamilies
    , RecursiveDo
    , TemplateHaskell
    , TypeApplications
  build-depends:
      base
    , xen-fret
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , svg-builder
    , bytestring
    , containers
    , multimap
    , aeson
    , reflex-dom
    , jsaddle-warp
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
