name:                xen-fret
version:             0.2.0.0   
license:             AGPL-3
license-file:        LICENSE
author:              Nathan BeDell
maintainer:          nbedell@tulane.edu         
build-type:          Simple
cabal-version:       >=1.10

library       
  exposed-modules:   
      XenFret,    
      XenFret.App,
      XenFret.Data,
      XenFret.AppData,
      XenFret.Util, 
      XenFret.TemperamentTheory,
      Reflex.Dom.Extras
  default-extensions:
      OverloadedStrings
    , PartialTypeSignatures
    , FlexibleContexts
    , TypeFamilies
    , RecursiveDo
    , TemplateHaskell
    , TypeApplications
    , LambdaCase
    , ScopedTypeVariables
    , DataKinds
    , GADTs
    , ImplicitParams
  build-depends:
      base
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , svg-builder
    , bytestring
    , containers
    , multimap
    , aeson
    , reflex-dom
    , jsaddle
    , jsaddle-warp
    , text
    , directory
    , data-default
    , profunctors
    , groups
    , vector-sized
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
