name:                xen-fret
version:             0.3.0.0   
license:             AGPL-3
license-file:        LICENSE
author:              Nathan BeDell
maintainer:          nbedell@tulane.edu         
build-type:          Simple
cabal-version:       >=1.10

library       
  exposed-modules:   
      XenFret,
      XenFret.Diagrams.Fretboard,
      XenFret.App,
      XenFret.App.Util,
      XenFret.App.Pages.Chords,
      XenFret.App.Pages.Main,
      XenFret.App.Pages.Preferences,
      XenFret.App.Pages.Scales,
      XenFret.App.Pages.Temperaments,
      XenFret.App.Pages.Tunings,
      XenFret.App.Widgets.Github,
      XenFret.App.Widgets.Fretboard,
      XenFret.App.Widgets.CRUD,
      XenFret.Data,
      XenFret.AppData,
      XenFret.Util,
      XenFret.Sagittal,
      XenFret.TemperamentTheory,
      Reflex.Dom.Extras,
      Reflex.Dom.Forms
  default-extensions:
      OverloadedStrings
    , PartialTypeSignatures
    , FlexibleContexts
    , FlexibleInstances
    , TypeFamilies
    , RecursiveDo
    , TemplateHaskell
    , TypeApplications
    , LambdaCase
    , ScopedTypeVariables
    , DataKinds
    , GADTs
    , RankNTypes
    , ImplicitParams
    , TupleSections
    , DeriveGeneric
    , RecordWildCards
    , CPP
  build-depends:
      base
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , svg-builder
    , SVGFonts
    , bytestring
    , containers
    , multimap
    , validation
    , lens
    , mtl
    , aeson
    , aeson-casing
    , reflex-dom
    , jsaddle
    , jsaddle-warp
    , text
    , utf8-string
    , directory
    , data-default
    , profunctors
    , groups
    , vector-sized
    , witherable
    , lens
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
