[package]
name = "xen-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
xen-theory = { path = "../xen-theory", features = ["serde"] }

[features]
default = []
web    = ["dep:dioxus"]
native = ["dep:rodio", "dep:rustysynth"]

[dependencies.dioxus]
version = "0.7"
features = ["document"]
optional = true

[dependencies.rodio]
version = "0.20"
default-features = false
features = ["wav"]
optional = true

[dependencies.rustysynth]
version = "1.3"
optional = true
