[package]
name = "app-common"
version = "0.1.0"
edition = "2021"

[dependencies]
xen-theory = { path = "../../xen-theory", features = ["serde"] }
fretboard-diagrams = { path = "../../fretboard-diagrams", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cozo = { version = "0.7", features = ["storage-sqlite"] }
dirs = "5"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
ndk-context = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
