[package]
name = "xen-fret"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "xen-fret"
path = "src/main.rs"

[dependencies]
app-common = { path = "../common" }
xen-theory = { path = "../../xen-theory", features = ["serde"] }
xen-dsp = { path = "../../xen-dsp" }
xen-sequencer = { path = "../../xen-sequencer" }
fretboard-diagrams = { path = "../../fretboard-diagrams", features = ["serde"] }
dioxus = { version = "0.7", features = ["web", "router", "document"] }
num = { version = "0.4.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rustysynth = "1.3"
svg2pdf = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "~1.8"  # pin below 1.9 to avoid graph_builder breakage in cozo's dep tree
tokio = { version = "1", features = ["sync", "time"] }
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
# dioxus desktop feature + tao (windowing) for native builds only.
# Cargo merges this with the [dependencies] entry above, so on native targets
# dioxus gets web + desktop + router + document features.
dioxus = { version = "0.7", features = ["desktop"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
dark-light = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"

[build-dependencies]
icon-gen = { path = "../../icon-gen" }

[dev-dependencies]
ttf-parser = "0.25"
