[package]
name = "uniffi-frontend-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "xen_fret_uniffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
app-common = { path = "../common" }
xen-dsp = { path = "../../xen-dsp" }
xen-theory = { path = "../../xen-theory", features = ["serde"] }
xen-sequencer = { path = "../../xen-sequencer", features = ["native"] }
fretboard-diagrams = { path = "../../fretboard-diagrams", features = ["serde"] }
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"

# Binding-generation binary (run with: cargo run --bin uniffi-bindgen -- generate ...)
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
